--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -1,7 +1,7 @@
 
 .card{
 	width: 90%;
-	margin-left:5%;
+	// margin-left:5%;
 }
 
 //Headlines
@@ -13,8 +13,9 @@
 	}
 
  	&--secondary {
+
 		@extend %hdln-sec;
-		margin-bottom: em(22px, 24px);	
+		//margin-bottom: em(22px, 24px);	
 	}
 
 }
