--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   position: absolute;
   width: 1px; }
 
-a, .nav a {
+.nav a {
   text-decoration: none;
   color: inherit;
   cursor: pointer; }
@@ -63,15 +63,15 @@ a, .nav a {
   box-sizing: border-box; }
 
 body {
-  color: palette(grey);
   font-size: 16px;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.5; }
 
 .container {
+  padding-left: 3.125em;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around; }
+  flex-direction: column; }
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -465,9 +465,12 @@ template {
   display: none; }
 
 .nav {
-  margin-right: 10%;
+  margin-right: 5%;
   list-style-type: none;
-  padding-top: 1em; }
+  padding-top: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  align-self: center; }
   .nav a {
     font-size: 1.25em;
     margin-top: 25px; }
@@ -475,8 +478,7 @@ template {
     .nav {
       display: flex;
       flex-wrap: wrap;
-      flex-direction: column;
-      align-self: center; } }
+      flex-direction: column; } }
 
 .nav__item {
   font-size: 1.25em;
@@ -514,13 +516,10 @@ template {
     background: #56F0C0; }
 
 .card {
-  width: 90%;
-  margin-left: 5%; }
+  width: 90%; }
 
 .headline--primary {
   margin-bottom: 1.6666666667em; }
-.headline--secondary {
-  margin-bottom: 0.9166666667em; }
 
 .link {
   color: #56F0C0; }
@@ -564,39 +563,53 @@ template {
 .grid__row {
   width: 90%;
   padding-top: 3.125em; }
-  .grid__row--default {
-    background-color: #56F0C0;
+  .grid__row .grid__col--3.theme__colors {
+    background-color: #AA6CCB;
     border: none;
-    font-size: 1.875em;
-    order-radius: 0.3125em; }
-  .grid__row--success {
-    background-color: #43E331;
+    font-size: 1.5625em;
+    border-radius: 0.3125em;
+    margin-top: 0.3125em; }
+  .grid__row .grid__col--4.theme__colors {
+    background-color: #0FEBC9;
     border: none;
-    font-size: 1.875em;
-    order-radius: 0.3125em; }
-  .grid__row--error {
+    font-size: 1.5625em;
+    border-radius: 0.3125em;
+    margin-top: 0.3125em; }
+  .grid__row .grid__col--5.theme__colors {
+    background-color: #0F81EB;
+    border: none;
+    font-size: 1.5625em;
+    border-radius: 0.3125em;
+    margin-top: 0.3125em; }
+  .grid__row .grid__col--6.theme__colors {
+    background-color: #0F81EB;
+    border: none;
+    font-size: 1.5625em;
+    border-radius: 0.3125em;
+    margin-top: 0.3125em; }
+  .grid__row .grid__col--7.theme__colors {
     background-color: #CE4B27;
     border: none;
-    font-size: 1.875em;
-    order-radius: 0.3125em; }
-  .grid__row--warning {
+    font-size: 1.5625em;
+    border-radius: 0.3125em;
+    margin-top: 0.3125em; }
+  .grid__row .grid__col--8.theme__colors {
     background-color: #F16B22;
     border: none;
-    font-size: 1.875em;
-    order-radius: 0.3125em; }
-  .grid__row--info {
-    background-color: #931DD3;
+    font-size: 1.5625em;
+    border-radius: 0.3125em;
+    margin-top: 0.3125em; }
+  .grid__row .grid__col--12.theme__colors {
+    background-color: #0FEB98;
     border: none;
-    font-size: 1.875em;
-    order-radius: 0.3125em; }
+    font-size: 1.5625em;
+    border-radius: 0.3125em;
+    margin-top: 0.3125em; }
   @media (min-width: 480px) {
     .grid__row {
       display: flex;
       flex-wrap: wrap;
       flex-direction: column; } }
-
-.grid__col--3 {
-  text-align: center; }
 
 .grid__col--12 {
   display: flex;
@@ -609,5 +622,23 @@ template {
   margin-left: auto;
   margin-right: auto;
   margin-top: 1.5em; }
+
+.grid__col--3.theme__colors {
+  display: flex;
+  flex-wrap: wrap; }
+  .grid__col--3.theme__colors--3 {
+    background-color: #AA6CCB; }
+  .grid__col--3.theme__colors--4 {
+    background-color: #0FEBC9; }
+  .grid__col--3.theme__colors--5 {
+    background-color: #0F81EB; }
+  .grid__col--3.theme__colors--6 {
+    background-color: #0F81EB; }
+  .grid__col--3.theme__colors--7 {
+    background-color: #CE4B27; }
+  .grid__col--3.theme__colors--8 {
+    background-color: #F16B22; }
+  .grid__col--3.theme__colors--12 {
+    background-color: #0FEB98; }
 
 /*# sourceMappingURL=style.css.map */
