--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -22,3 +22,8 @@
   $g-context: ($g-col-width * $g-col-count) + ($g-gutter-width * ($g-col-count - 1));
   @return $g-context;
 }
+
+//function for percentage
+@function percentage($target, $context) {
+    @return ($target / $context) * 100%;
+}
