--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,19 +1,16 @@
 
 
 .grid__row{
-	// .grid__col--3{
-	// 	text-align:center;
-	// }
 	width: 90%;
-	padding-top:em(50px);
-	
-@each $theme, $color in $grid-colors{
+	@each $theme, $color in $grid-colors{
 	.grid__col--#{$theme}.theme__colors{
+
 	background-color: $color;
 	border:none;
-	font-size:em(25px);
+	font-size:em(20px);
 	border-radius: em(5px);
 	margin-top:em(5px);
+	align-items: left;
 }
 }	
 	@include mq(small){
@@ -22,9 +19,26 @@
 	
 
 }
+	@include mq(large){
+		@include flexbox($direction:row,$content:space-around);
+		 @for $i from 1 through $g-col-count {
+
+    $context: g-context($g-col-width, $g-col-count, $g-gutter-width);
+    $target: ($g-col-width * $i)  +  ($g-gutter-width * ($i - 1));
+
+        .grid__col--#{$i}{
+            width: percentage($target, $context);
+        }
+    }
 }
-
-
+}
+.grid__col--3 {
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
 // .grid__col--3{
 // 	text-align:center;
 // 	 }
@@ -32,8 +46,12 @@
 // 	text-align:center;
 // }
 .grid__col--12{
-	@include flexbox($direction:column);
+	@include mq(large){
+		
+	@include flexbox($direction:row,$content:space-between);
+		}
 	
+	//width:100%;
 }
 // .link{
 // 	margin-left:31%;
