--- a/scss/components/_img.scss
+++ b/scss/components/_img.scss
@@ -8,6 +8,12 @@
     margin-right: auto;
     margin-top: em(24px);
   }
+  @include m(frame) {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: em(10px);
+  }
 }
 .img--logo{
 	// text-align:center;
@@ -19,9 +25,3 @@
 // 		align-self: center;
 // 	};
 // }
-.grid__col--3.theme__colors{
-	@include flexbox(){
-		//align-self:flex-start;
-	}
-	@include grid-colors($grid-colors);
-}
