--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,7 +1,5 @@
 
 
-
-
 //CONFIG
 @import 'config';
 
@@ -11,8 +9,7 @@
 
 
 //PLACEHOLDERS
-@import 'extends';
-
+@import 'placeholders';
 
 
 //MIXINS
