--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,32 +2,23 @@
 //Color changer
 [class^="btn--"] {
      @extend %btn;  
-   @include mq(large){
-   	width:auto;
+     @include mq(large){
+   	 	width:auto;
    }
-    }
+}
 
 
 .btn{
 	//transition: all 0.5s;
 	width:100%;
 	@include bg-colors($ui-colors){
-		border:none;
-		font-size:em(30px);
-		border-radius: em(5px);
-		margin-top: em(10px);
-		cursor:pointer;
-		text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-		border: 0;
-  		border-bottom: 2px solid $lightdark;
-  		box-shadow: inset 0 -2px $lightdark;
+		@extend %btndet;
 	&:active
 {	
-	top: 1px;
-  outline: none;
-  box-shadow: none;
+		top: 1px;
+ 	    outline: none;
+ 	    box-shadow: none;
 
 }	
-
-	}
+}
 }
