--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,9 +1,8 @@
 .nav{
-	
 	list-style-type:none;
 	padding-top:em(16px);
 	// text-align:center;
-	@include flexbox(){
+	@include flexbox($direction:column){
 		align-self:center;
 	}
 	
@@ -32,24 +31,20 @@
 }
 }
 .nav__item{
+	@extend %navitem;
 	&:first-child{
 		@extend %navitemshover;
 		border-radius:em(10px);
 	}
-	display:inline-block;
-	font-size:em(20px);
-	text-align:center;
-	@include mq(small){
-		
-		margin-top:em(16px);
-		}
+		@include mq(small){
+			margin-top:em(16px);
+			}
 	&:hover{
 		@extend %navitemshover;
 		border-radius:em(10px);
 	}
 	// border: 1px solid blue;
 	@include mq(large){
-		
 		margin-top:em(10px);
 		}
 }
