--- a/scss/utilities/_placeholders.scss
+++ b/scss/utilities/_placeholders.scss
@@ -9,10 +9,15 @@
 //Navigation Hover
 %navitemshover{
 	background-color:$turqoise;
-    box-shadow: 0 8px 6px -6px $black;
+  box-shadow: 0 8px 6px -6px $black;
 	color:$white;
 }
 
+%navitem{
+  display:inline-block;
+  font-size:em(20px);
+  text-align:center;
+}
 // Headlines
 
 %hdln-prim {
@@ -30,6 +35,8 @@
   font-family: $font-family--secondary;
   opacity: .4;
 }
+
+//Blockquote
 %quote {
   
   letter-spacing: $letter-space;
@@ -41,6 +48,8 @@
   margin-left:em(10px);
   padding-left:em(10px);
 }
+
+//Buttons
 %btn {
   width:100%;
   height:em(30px);
@@ -54,6 +63,7 @@
   line-height:em(10px);
   transition: opacity $trns-duration;
   display: block;
+  background: $turqoise;
   &:hover {
     opacity: .75;
   }
@@ -61,3 +71,46 @@
     opacity: initial;
   }
 }
+%btndet{
+  border:none;
+  font-size:em(30px);
+  border-radius: em(5px);
+  margin-top: em(10px);
+  cursor:pointer;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  border: 0;
+  border-bottom: 2px solid $lightdark;
+  box-shadow: inset 0 -2px $lightdark;
+}
+
+//Style for login inputs
+%logininputs{
+  width:100%;
+  height:em(30px);
+  margin-top:em(20px);
+  border-top:0;
+  border-left:0;
+  border-right:0; 
+  font-size : em(18px);
+  margin-bottom: em(20px, 18px);
+  border-bottom: 6px solid $turqoise;
+  border-radius: em(10px);
+  font-weight: $font-weight--light;
+}
+//Grid
+%grid{
+  border:none;
+  font-size:em(20px);
+  border-radius: em(5px);
+  margin-top:em(5px);
+  align-items: left;
+}
+
+
+//Images
+%img{
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+}
+
